--- a/package.json
+++ b/package.json
@@ -10,10 +10,16 @@
   },
   "dependencies": {
     "@base-ui-components/react": "1.0.0-alpha.6",
+    "@ffmpeg/ffmpeg": "^0.12.15",
+    "@ffmpeg/util": "^0.12.2",
     "@paper-design/shaders-react": "0.0.21",
+    "@types/gif.js": "^0.2.5",
+    "@types/html2canvas": "^0.5.35",
     "@vercel/analytics": "^1.5.0",
     "@vercel/blob": "0.27.1",
     "clsx": "^2.1.1",
+    "gif.js.optimized": "^1.0.1",
+    "html2canvas": "^1.4.1",
     "lodash-es": "^4.17.21",
     "next": "15.1.7",
     "radix-ui": "1.1.3",
@@ -24,6 +30,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.0.7",
+    "@types/ffmpeg": "^1.0.7",
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^20",
     "@types/react": "^19",
